Setting up swagger documentation
