# src/web/services/v1/authservice/logout.go
@@ -10,6 +10,16 @@ import (
 	"github.com/go-chi/render"
 )
 
+// @Summary Logout
+// @Description It allows to logout users from account with JWT
+// @Tags authentication
+// @Param Authorization header string true "BEARER JWT"
+// @Accept json
+// @Produce json
+// @Success 200
+// @Failure 401 {object} v1error.ErrorResponse{}
+// @Failure 404 {object} v1error.ErrorResponse{}
+// @Router /logout [POST]
 func (as *authservice) Logout(w http.ResponseWriter, r *http.Request) {
 	txID := r.Header["transaction_id"][0]
 
